--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,10 @@
   "devDependencies": {
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "@types/express": "^4.17.7"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
