--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "jwt-typeORM",
+  "name": "jwttype",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon --require dotenv/config --exec ts-node src/index.ts",
+    "dev": "npx nodemon  --exec ts-node --files src/index.ts",
     "typeorm": "npx ts-node ./node_modules/typeorm/cli.js"
   },
   "keywords": [],
