--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@types/jsonwebtoken": "^8.5.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "@types/bcryptjs": "^2.4.2"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
